--- a/004-Functions-And-More/Functions And More - Chap 02 - Demo.ipynb
+++ b/004-Functions-And-More/Functions And More - Chap 02 - Demo.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled3.ipynb",
+      "name": "Functions and more - Chap 02 - Demo",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOSNZah7LnbTGlUXtDgH0tV",
+      "authorship_tag": "ABX9TyP+Teenpz2BzzgP7uBf8Zl2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-xCQWFWE-dQu",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Variable scope"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "RU7za-FK-RCA",
@@ -33,7 +43,13 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def f():\n",
+        "  a = []\n",
+        "  print(a)\n",
+        "  a += [0, 1, 2]\n",
+        "  print(a)\n",
+        "\n",
+        "f()"
       ],
       "execution_count": 0,
       "outputs": []
