--- a/004-Functions-And-More/Functions And More - Chap 02 - Demo.ipynb
+++ b/004-Functions-And-More/Functions And More - Chap 02 - Demo.ipynb
@@ -6,7 +6,7 @@
       "name": "Functions and more - Chap 02 - Demo",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPq7vCThFxynO9kFCdbPsbm",
+      "authorship_tag": "ABX9TyPuBxIl0cjiCjo0EtlvCP2o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -327,6 +327,148 @@
       },
       "source": [
         "f4()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oBobh8TfM8qU",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Functional programming"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gCu2M-EaNAga",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def add_round(a, b):\n",
+        "  return round(a + b)\n",
+        "\n",
+        "add_round(3.5, 6.24)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2UtRmg9WNPde",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = add_round(1.65, 4.7)\n",
+        "a_r = add_round\n",
+        "\n",
+        "print(a)\n",
+        "print(a_r)\n",
+        "print(a_r(1.65, 4.7))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fCPxdowkNb1-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def apply_to_pairs(fn, seq):\n",
+        "  return [fn(x, y) for x, y in zip(seq[:-1], seq[1:])]\n",
+        "\n",
+        "l = [0.1, 2.5, 3.3, 2.01]\n",
+        "apply_to_pairs(add_round, l)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QVR384PiODNW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "apply_to_pairs(lambda x, y: x*y, l)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CtBoLBMQOk5P",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Currying (optional)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Z8RC2H14PSDs",
+        "colab_type": "text"
+      },
+      "source": [
+        "Currying is an advanced functional programming technique where a function returns a function, built specifically after the argument passed to the builder function.\n",
+        "\n",
+        "the name comes from the idea that the argument passed to the builder function are \"curried\" into the returned function.\n",
+        "\n",
+        "In our example, we define the builder function `make_add_round` to return a partial `add_round` function where the first argument is fixed to the value given as argument to `make_add_round`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nuuikUInOdWo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def make_add_round(a):\n",
+        "  return lambda b: add_round(a, b)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ATAGwxuEO9Dj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "add_2 = make_add_round(2)\n",
+        "add_9 = make_add_round(9)\n",
+        "sub_1 = make_add_round(-1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bYDZFxJ2PGG7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(add_2(13.4))\n",
+        "print(add_9(0.9))\n",
+        "print(sub_1(0.9))"
       ],
       "execution_count": 0,
       "outputs": []
