--- a/004-Functions-And-More/Functions And More - Chap 03 - Demo.ipynb
+++ b/004-Functions-And-More/Functions And More - Chap 03 - Demo.ipynb
@@ -6,7 +6,7 @@
       "name": "Functions and more - Chap 03 - Demo",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMpdKCUJCfVSt36UZ+F1Ur+",
+      "authorship_tag": "ABX9TyMSGlaqdSKvVClGQlYjz8Ut",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,8 @@
         "colab": {}
       },
       "source": [
-        "# This is in fact the cartesian product of iterables a and b\n",
+        "# This is in fact the \"cartesian product\" (https://en.wikipedia.org/wiki/Cartesian_product)\n",
+        "# of iterables a and b\n",
         "\n",
         "def all_pairs(a, b):\n",
         "  for x in a:\n",
@@ -154,6 +155,235 @@
         "print(next(z))\n",
         "print(next(z))\n",
         "print(next(z))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SazaB_Co0AeV",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Errors"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nmdFmmhV0Bmz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(l)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kc7bisQp0C80",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "l = (0, 1, 2)\n",
+        "l[0] = 'zero'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7jJuRM9D0Hc9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "l.pop()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jY69vsC90JEL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "120 / 0"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lTqt4zVY0MIg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "l[36]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4Wb7htbV0P2N",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "d = {'hello': 'world'}\n",
+        "d['goodbye']"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3QnUfWBm0XEW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import math\n",
+        "\n",
+        "math.sqrt(-1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AYO6sRhQ2t2v",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from random import random\n",
+        "\n",
+        "def print_sqrt(n):\n",
+        "    print(f'The square root of {n} is {math.sqrt(n)}')\n",
+        "\n",
+        "def print_rnd_sqrt():\n",
+        "    print_sqrt(random() - .5)\n",
+        "\n",
+        "print_rnd_sqrt()\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2_csqhXA9jYd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def list_sqrt(in_list):\n",
+        "    out_list = []\n",
+        "    for n in in_list:\n",
+        "        try:\n",
+        "            out_list.append(math.sqrt(n))\n",
+        "        except:\n",
+        "            pass\n",
+        "    return out_list\n",
+        "\n",
+        "list_sqrt([2, -1, 16, 'zero', None, 256])\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TZkit6-L-7Eb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for i in range(10):\n",
+        "  pass"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HTxtA_nuFIEi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = int(input('Enter an integer number: '))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pF-vMmt0F74-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = None\n",
+        "while x is None:\n",
+        "  try:\n",
+        "    x = int(input('Enter an integer number: '))\n",
+        "  except:\n",
+        "    print(f'Could not parse integer.')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6sN21Lvea3Rb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = None\n",
+        "while x is None:\n",
+        "  try:\n",
+        "    x = int(input('Enter an integer number: '))\n",
+        "  except ValueError:\n",
+        "    print('Could not parse integer.')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qxb3V9qaBkcM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = None\n",
+        "while x is None:\n",
+        "  try:\n",
+        "    x = int(input('Enter an integer number: '))\n",
+        "  except ValueError as err:\n",
+        "    print(f'Could not parse integer. {err}')"
       ],
       "execution_count": 0,
       "outputs": []
