--- a/004-Functions-And-More/Functions And More - Chap 01 - Demo.ipynb
+++ b/004-Functions-And-More/Functions And More - Chap 01 - Demo.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [
         "aSdEiF-qktuN"
       ],
-      "authorship_tag": "ABX9TyOaJNGgRQGEat1CmxHzxYZO",
+      "authorship_tag": "ABX9TyMbMG106jMibS/ZbVFwzFsL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,6 +142,47 @@
       },
       "source": [
         "sorted(l, reverse=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XmTNcE1RP9bX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "presidents = [{'firstname': 'George H. W.', 'lastname': 'Bush'},\n",
+        "              {'firstname': 'Thomas', 'lastname': 'Jefferson'},\n",
+        "              {'firstname': 'George W.', 'lastname': 'Bush'},\n",
+        "              {'firstname': 'George', 'lastname': 'Washington'},\n",
+        "              {'firstname': 'Theodore', 'lastname': 'Roosevelt'},\n",
+        "              {'firstname': 'Barack', 'lastname': 'Obama'},\n",
+        "              {'firstname': 'Abraham', 'lastname': 'Lincoln'},\n",
+        "              {'firstname': 'John', 'lastname': 'Kennedy'},\n",
+        "              {'firstname': 'Franklin', 'lastname': 'Roosevelt'}]\n",
+        "\n",
+        "presidents_2 = sorted(presidents, key=lambda p: p['lastname'])\n",
+        "print(presidents_2)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UlnbEJUhZJ_t",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "presidents_2 = sorted(presidents, key=lambda p: p['firstname'])\n",
+        "print(presidents_2)\n",
+        "\n",
+        "presidents_3 = sorted(presidents_2, key=lambda p: p['lastname'])\n",
+        "print(presidents_3)"
       ],
       "execution_count": 0,
       "outputs": []
