--- a/004-Functions-And-More/Functions And More - Chap 03 - Demo.ipynb
+++ b/004-Functions-And-More/Functions And More - Chap 03 - Demo.ipynb
@@ -6,7 +6,7 @@
       "name": "Functions and more - Chap 03 - Demo",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMSGlaqdSKvVClGQlYjz8Ut",
+      "authorship_tag": "ABX9TyNP3mIaQznKVLxWHQBwrzD5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -384,6 +384,163 @@
         "    x = int(input('Enter an integer number: '))\n",
         "  except ValueError as err:\n",
         "    print(f'Could not parse integer. {err}')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M8G29eJua16H",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Deeper into errors"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "btJMxQ14brrP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# This code downloads a CSV file of stock prices from the web\n",
+        "\n",
+        "import requests\n",
+        "\n",
+        "res = requests.get('https://chrales.dev/python-3-beginner/tesla-stock-price.csv')\n",
+        "with open('tesla-stock-prices.csv', mode='rb+') as f:\n",
+        "  f.write(res.content)\n",
+        "  # Display the 256 first bytes\n",
+        "  f.seek(0, 0)\n",
+        "  print(f'{f.read(256).decode()}...')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zy57IUbodPsq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Preliminary import\n",
+        "\n",
+        "from datetime import datetime"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DLY8w_Vpay3s",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def read_csv(path):\n",
+        "    rows = []\n",
+        "    f = open(path)\n",
+        "    s = f.read().splitlines()\n",
+        "    for row in s:\n",
+        "        row = row.split(',')\n",
+        "        date = datetime.strptime(row[0], '%Y/%m/%d')\n",
+        "        price = float(row[1])\n",
+        "        rows.append((date, price))\n",
+        "    f.close()\n",
+        "    return rows"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ajlJazsxdcVT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "read_csv('tesla-stock-price.csv')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nesJaNLUdamm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "read_csv('tesla-stock-prices.csv')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QJBXSMtud9t8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def read_csv(path):\n",
+        "    rows = []\n",
+        "    f = None\n",
+        "    try:\n",
+        "        f = open(path)\n",
+        "        s = f.read().splitlines()\n",
+        "        for row in s:\n",
+        "            row = row.split(',')\n",
+        "            date = datetime.strptime(row[0], '%Y/%m/%d')\n",
+        "            price = float(row[1])\n",
+        "            rows.append((date, price))\n",
+        "    except OSError as err:\n",
+        "        print(f'Failed to open file. {err}')\n",
+        "    except ValueError as err:\n",
+        "        print(f'Invalid data. {err}')\n",
+        "    except:\n",
+        "        raise\n",
+        "    else:\n",
+        "        return rows\n",
+        "    finally:\n",
+        "        if f is not None:\n",
+        "          f.close()\n",
+        "    return []"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K-kE7HOseM74",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "read_csv('tesla-stock-price.csv')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EZCCcTymeaZg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "read_csv('tesla-stock-prices.csv')"
       ],
       "execution_count": 0,
       "outputs": []
